ft:add signals.py functions

--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     
-    {% include 'main/navbar.html' %}
+    {% include 'navbar.html' %}
 
     {% if messages %}
         {% for message in messages %}
