--- a/myapp/templates/users/register.html
+++ b/myapp/templates/users/register.html
@@ -9,7 +9,7 @@
         <form action="" method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Awwwards | Sign up</legend>
+                <legend class="border-bottom mb-4">Awwards | Sign up</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
