ft:add background image display for homepage

--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,1 +1,14 @@
-<h2>This is a homepage</h2>
+{% extends 'base.html' %}
+
+{% block content %}
+{% include 'navbar2.html' %}
+
+<div class="first-div">
+    <div class="intotxt">
+    <h2 class="text-center h2awards" >Andy Awwwards.</h2>
+    <p class="text-center pdescribe">Post your projects here and get them rated</p>
+    </div>
+</div>
+
+
+{% endblock %}
