--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -12,6 +12,18 @@
         {% bootstrap_css %}
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
         <link href="https://fonts.googleapis.com/css?family=Trochut&display=swap" rel="stylesheet">
+
+        <!--Font styles start-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Faster+One&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
+
+
+
+        <!-- Font styles end-->
     {% endblock %}
 
     {% if title %}
@@ -23,7 +35,7 @@
 </head>
 <body>
     
-    {% include 'navbar.html' %}
+    
 
     {% if messages %}
         {% for message in messages %}
