--- a/myapp/templates/users/login.html
+++ b/myapp/templates/users/login.html
@@ -2,7 +2,8 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <div class="row">
+{% include 'navbar2.html' %}
+    <div class="row mt-5">
         <div class="col-md-4"></div>
         <div class="col-md-4">
     <div class="content-section">
