--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -9,6 +9,31 @@
     <p class="text-center pdescribe">Post your projects here and get them rated</p>
     </div>
 </div>
+<div>
+    <h3 class="text-center mt-5">PROJECTS</h3>
+    <div>
+        <p>cards here</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <p>first column</p>
+                    <!--card start-->
+                    <div>
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="..." alt="Card image cap">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
+                    </div>
+                    <!--card end-->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 {% endblock %}
