--- a/myapp/static/css/main.css
+++ b/myapp/static/css/main.css
@@ -26,3 +26,19 @@
     color: white;
     font-size: 23px;
 }
+.uploadbg{
+    height: 100vh;
+    color: white;
+    background:linear-gradient( rgba(0,0,0,0.4),rgba(0,0,0,0.4) ),url(../images/upload.jpg);
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+}
+
+.uploaddescription{
+    margin-top: 17vh;
+    /* background-color: rgba(1, 1, 34, 0.656);; */
+    background-color: rgba(54, 54, 55, 0.656);;
+    padding: 50px;
+    border-radius: 20%;
+}
