ft:create project rating model

--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -15,21 +15,30 @@
         <p>cards here</p>
         <div class="container">
             <div class="row">
-                <div class="col-3">
-                    <p>first column</p>
+            
+                    {% if projects %}
+                    {% for project in projects %}
+                    <div class="col-3 ml-5 mt-5">
                     <!--card start-->
-                    <div>
+                    
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="..." alt="Card image cap">
+                            <div class="card-header">
+                            <img src="{{ project.user.profile.profile_pic.url }}" alt="profile picture" class="rounded-circle custom-display border border-danger">
+                    <p class="ml-2">Uploaded by: {{ project.user.username }}</p>
+                              </div>
+                            <img src="{{ project.image.url }}" class="card-img-top" alt="screenshot">
                             <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <h5 class="card-title">{{ project.title }}</h5>
+                              <p class="card-text"><i>{{ project.description }}</i></p>
+                              <a href="{{ project.link }}" class="btn btn-outline-success">Visit Site</a>
                             </div>
                           </div>
                     </div>
+                
                     <!--card end-->
-                </div>
+                    {% endfor %}
+                    {% endif %}
+                
             </div>
         </div>
     </div>
