--- a/myapp/templates/project/projectrating.html
+++ b/myapp/templates/project/projectrating.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+{% load crispy_forms_tags %}
+
+{% block content %}
 <div class="container">
     <div class="row">
         <div class="col-4">
@@ -82,3 +86,4 @@
 
 
 </div>
+{% endblock %}
