--- a/myapp/templates/navbar2.html
+++ b/myapp/templates/navbar2.html
@@ -3,7 +3,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a id="navbar-logo-home" class="navbar-brand" href="#">AWWARDS .</a>
+    <a id="navbar-logo-home" class="navbar-brand" href="{% url 'home' %}">AWWARDS .</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -17,7 +17,7 @@
           <a class="nav-link" href="{% url 'upload_project' %}">Upload Project <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/profile">View Profile <span class="sr-only">(current)</span></a>
+          <!-- <a class="nav-link" href="/profile">View Profile <span class="sr-only">(current)</span></a> -->
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0 pl-5">
