--- a/myapp/templates/project/projectrating.html
+++ b/myapp/templates/project/projectrating.html
@@ -66,7 +66,7 @@
                 <tbody class="t-data">
                     <tr class="table-primary">
                         <th scope="row" ></th>
-                        <td><p><b>Total score</b></p></td>
+                        <td><p><b>Total scores </b></p></td>
                         <td><p><b>{{ design_average }}</b></p></td>
                         <td><p><b>{{ usability_average }}</b></p></td>
                         <td><p><b>{{ content_average }}</b></p></td>
