style:add API button to navbar

--- a/myapp/templates/navbar2.html
+++ b/myapp/templates/navbar2.html
@@ -17,8 +17,12 @@
           <a class="nav-link" href="{% url 'upload_project' %}">Upload Project <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <!-- <a class="nav-link" href="/profile">View Profile <span class="sr-only">(current)</span></a> -->
+          <a class="nav-link" style="color: red;" href="profile-api/">Profile API<span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" style="color: red;" href="project-api/">Projects API<span class="sr-only">(current)</span></a>
+        </li>
+       
       </ul>
       <form class="form-inline my-2 my-lg-0 pl-5">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
