--- a/myapp/templates/navbar2.html
+++ b/myapp/templates/navbar2.html
@@ -16,11 +16,9 @@
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'upload_project' %}">Upload Project <span class="sr-only">(current)</span></a>
         </li>
+        
         <li class="nav-item active">
-          <a class="nav-link" style="color: red;" href="profile-api/">Profile API<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" style="color: red;" href="project-api/">Projects API<span class="sr-only">(current)</span></a>
+          <a class="nav-link" style="color: red;" href="project-api/">Get API<span class="sr-only">(current)</span></a>
         </li>
        
       </ul>
